first draft finished

--- a/public/timer.html
+++ b/public/timer.html
@@ -3,10 +3,14 @@
 		<head>
 			<script src="https://code.jquery.com/jquery-2.2.2.min.js"   integrity="sha256-36cp2Co+/62rEAAYHLmRCPIych47CvdM+uTBJwSzWjI=" crossorigin="anonymous"></script>
 			<script src='/javascripts/index.js' type='text/javascript'></script>
+			<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+			<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 		</head>
 		<body>
 			<h1 id="timer" style="text-align: center;">
-				<span id="minute">20</span> min <span id="second">00</span> sec
+				<div><span id="minute">20</span> : <span id="second">00</span></div>
+				<button id="pauseBtn" type="button" class="btn btn-primary">Pause</button>
+				<button id="resumeBtn" type="button" class="btn btn-success">Resume</button>
 			</h1>
 		</body>
 	</html>
