--- a/public/timer.html
+++ b/public/timer.html
@@ -12,5 +12,6 @@
 				<button id="pauseBtn" type="button" class="btn btn-primary">Pause</button>
 				<button id="resumeBtn" type="button" class="btn btn-success">Resume</button>
 			</h1>
+			<audio id="beep" src="http://www.soundjay.com/button/beep-06.wav" autostart="false" ></audio>
 		</body>
 	</html>
